{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 368,
  "lineage": "6403f36b-4d0f-8ec5-2fc8-53e319ab2cb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "teravm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:152492849128:instance/i-04724e5dbaa4d6f7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04724e5dbaa4d6f7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056bdcd2594bb1652",
            "private_dns": "ip-10-0-1-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-18-212-217-74.compute-1.amazonaws.com",
            "public_ip": "18.212.217.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040963bbb65225124",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e623f4710fde4040",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b7e258a19cc77b5"
            ]
          },
          "dependencies": [
            "aws_security_group.simply_sg",
            "aws_subnet.main_public_1",
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Simply_main_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:internet-gateway/igw-0e077c828692d6297",
            "id": "igw-0e077c828692d6297",
            "owner_id": "152492849128",
            "tags": {
              "Name": "main_gw"
            },
            "tags_all": {
              "Name": "main_gw"
            },
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:route-table/rtb-0ae8eee6a492f2c48",
            "id": "rtb-0ae8eee6a492f2c48",
            "owner_id": "152492849128",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e077c828692d6297",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main_public_rt"
            },
            "tags_all": {
              "Name": "main_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Simply_main_gw",
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0910dc1a6798d2651",
            "route_table_id": "rtb-0ae8eee6a492f2c48",
            "subnet_id": "subnet-0e623f4710fde4040"
          },
          "dependencies": [
            "aws_internet_gateway.Simply_main_gw",
            "aws_route_table.main_public_rt",
            "aws_subnet.main_public_1",
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6bc05e20b3a709c",
            "route_table_id": "rtb-0ae8eee6a492f2c48",
            "subnet_id": "subnet-09dff3a8d43f2a864"
          },
          "dependencies": [
            "aws_internet_gateway.Simply_main_gw",
            "aws_route_table.main_public_rt",
            "aws_subnet.main_public_2",
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189c335b61db0d3a",
            "route_table_id": "rtb-0ae8eee6a492f2c48",
            "subnet_id": "subnet-068f29ddbcf3d5ca3"
          },
          "dependencies": [
            "aws_internet_gateway.Simply_main_gw",
            "aws_route_table.main_public_rt",
            "aws_subnet.main_public_3",
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "simply_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:security-group/sg-00b7e258a19cc77b5",
            "description": "Allow web traffics",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b7e258a19cc77b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-sg",
            "name_prefix": "",
            "owner_id": "152492849128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-for-subnet"
            },
            "tags_all": {
              "Name": "sg-for-subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:subnet/subnet-05b4c486c47e0f0bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b4c486c47e0f0bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152492849128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private_1-Subnet"
            },
            "tags_all": {
              "Name": "main-private_1-Subnet"
            },
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:subnet/subnet-03cd4bc6c19d54054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cd4bc6c19d54054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152492849128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_private_2-Subnet"
            },
            "tags_all": {
              "Name": "main_private_2-Subnet"
            },
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:subnet/subnet-051939bbc96b804ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051939bbc96b804ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152492849128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_private_3-Subnet"
            },
            "tags_all": {
              "Name": "main_private_3-Subnet"
            },
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:subnet/subnet-0e623f4710fde4040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e623f4710fde4040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152492849128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public_1-Subnet"
            },
            "tags_all": {
              "Name": "main-public_1-Subnet"
            },
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:subnet/subnet-09dff3a8d43f2a864",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dff3a8d43f2a864",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152492849128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public_2-Subnet"
            },
            "tags_all": {
              "Name": "main-public_2-Subnet"
            },
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:subnet/subnet-068f29ddbcf3d5ca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068f29ddbcf3d5ca3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152492849128",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public_3-Subnet"
            },
            "tags_all": {
              "Name": "main-public_3-Subnet"
            },
            "vpc_id": "vpc-0f82cf5cf7dfc7e94"
          },
          "dependencies": [
            "aws_vpc.simplylearn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "simplylearn_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152492849128:vpc/vpc-0f82cf5cf7dfc7e94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5e49f16c5103955",
            "default_route_table_id": "rtb-0b5e5a1facc92796a",
            "default_security_group_id": "sg-07db203e4233e29bc",
            "dhcp_options_id": "dopt-90eebaea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f82cf5cf7dfc7e94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5e5a1facc92796a",
            "owner_id": "152492849128",
            "tags": {
              "Name": "simplylearn_vpc"
            },
            "tags_all": {
              "Name": "simplylearn_vpc"
            }
          }
        }
      ]
    }
  ]
}